syntax = "proto3";

package grpc;
option go_package="./;grpc";

service UserService {
    rpc GetListUser (GetListUserRequest) returns (GetListUserResponse) {};
}

message GetListUserRequest {
    int32 page = 1;
    int32 limit = 2;
}

message GetListUserResponse {
    string message = 1;
    repeated User data = 2;
    int64 total = 3;
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string created_at = 5;
    string updated_at = 6;
    string deleted_at = 7;
}

